src/objects/Order__c.object
<CustomObject>
    <fields>
        <fullName>Amount_Paid__c</fullName>
        <label>Paid Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Client_Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client Company</label>
        <referenceTo>Company__c</referenceTo>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Client_GN_User__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Client GN User</label>
        <referenceTo>GN_User__c</referenceTo>
        <relationshipName>Orders1</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Currency_Code__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Currency Code</label>
        <referenceTo>Currency__c</referenceTo>
        <relationshipName>Orders</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EVent_Admin_Comments__c</fullName>
        <label>EVent Admin Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Events__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Events</label>
        <referenceTo>BLN_Event__c</referenceTo>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Fee_Amount__c</fullName>
        <label>Fee Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Order_Discount__c</fullName>
        <label>Order Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Order_Status__c</fullName>
        <label>Order Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Paid</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Partially Paid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fully Paid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Order_Sub_Total__c</fullName>
        <label>Order Sub-Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Order_Taxes__c</fullName>
        <label>Order Taxes</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Order_Total__c</fullName>
        <label>Order Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Transaction_Status__c</fullName>
        <label>Transaction Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Completed</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Went to paypal Page</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>order_type__c</fullName>
        <label>order type</label>
        <picklist>
            <picklistValues>
                <fullName>EVENT ATTENDEE</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>EVENT PRODUCER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EVENT EXIBITOR</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>BLN Order</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Order_Status__c</columns>
        <columns>Transaction_Status__c</columns>
        <columns>Events__c</columns>
        <columns>Order_Total__c</columns>
        <columns>Order_Sub_Total__c</columns>
        <columns>Order_Discount__c</columns>
        <columns>Amount_Paid__c</columns>
        <columns>Client_Company__c</columns>
        <columns>Client_GN_User__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Events__c</field>
            <operation>equals</operation>
            <value>salesforce.com test</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>O-{00000000}</displayFormat>
        <label>Order Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BLN Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>